syntax = "proto3";
option java_multiple_files = true;
option java_outer_classname = "GrpcAppProto";
option objc_class_prefix = "GAP";

service GrpcService{
  rpc grpcSavePerson (GrpcRequestSavePerson) returns (GrpcResponse){}
  rpc grpcReadInfo(ReadInfoRequest) returns (stream ReadInfoResponse){}
}

message ReadInfoResponse{
  string message = 1;
}
message  ReadInfoRequest{
  int32 id = 1;
}

message GrpcRequestSavePerson{
  int32 id = 1;
  string firstName = 2;
  string lastName = 3;
  int32 age = 4;
}

message  GrpcResponse{
  string message = 1;
}
